--- a/Tex/app_code.tex
+++ b/Tex/app_code.tex
@@ -1,8 +1,8 @@
 \chapter{Implementation Details}
-All source code is made available under \url{https;//github.com/fzimmermann89/msc}.
+All source code is made available under \url{https://github.com/fzimmermann89/msc}.
 In \fref{algo:td} the procedure for time dependent simulations is show in detail.
 \begin{algorithm}
-	\caption{Time dependent Simulation}\label{timesim}
+	\caption{Time dependent Simulation}\label{algo:timesim}
 	\begin{algorithmic}
 		\Procedure{Scan}{$x \in \mathbb{C}^N$, $t \in \mathbb{R}^N$, $\tau\ \in \mathbb{R}$}
 		\Comment{Exponentially decaying inclusive prefix sum} 
