--- a/Tex/introduction.tex
+++ b/Tex/introduction.tex
@@ -1,15 +1,15 @@
 \chapter{Introduction}
 Throughout the history of science, advances in the abilities to image structures at ever-decreasing length scales have enabled break-through discoveries and led to a better understanding of our world.
-The optical microscope gave humankind a glance into the world of microorganisms; X-ray crystallography and later on electron microscopy allowed scientists to decipher the building blocks of life\cite{hooke1665,laue1915,ruska1939,watson1953}. These methods simultaneously laid the foundation for modern semiconductor physics and pushed materials science forward
+The optical microscope gave humankind a glance into the world of microorganisms; X-ray crystallography and later on electron microscopy allowed scientists to decipher the building blocks of life \cite{hooke1665,laue1915,ruska1939,watson1953}. These methods simultaneously laid the foundation for modern semiconductor physics and pushed materials science forward
 -- which in turn lead to new advancements in imaging \cite{teal1951,hovmoeller1984,jiang2018}.  
 
-In X-ray imaging, the use of synchrotron radiation and, finally, the advent of free-electron lasers (FELs) providing ultra-short and brilliant X-ray pulses pushed the boundaries far beyond what could have been imagined by Röntgen \cite{cloetens1996,emma2010}. One imaging method making use of these capabilities is Coherent Diffractive Imaging (CD). In CDI, spatially and temporally coherent incoming light is scattered within a sample by a fixed phase, conserving its coherence properties and producing an interference pattern which upon measurement can give spatial information with high temporal and spatial resolution \cite{seibert2011,bostedt2010,barke2015}. Incoherent scattering processes, such as fluorescence, are considered background noise worth suppression or filtering in CDI \cite{schultz2013chapter7}.  On the other hand, various X-ray fluorescence imaging methods use  the created fluorescence for elemental identification while gaining spatial information from scanning the excitation beam or the field of view of the detector \cite{vincze2004,pushie2014}.  X-ray fluorescence holography (XFH) extracts the spatial information from the observed interference between the fluorescence created within a crystalline sample and secondary elastically scattered fluorescence \cite{tegze1996,gog1996}.
+In X-ray imaging, the advent of synchrotron radiation and, finally, of free-electron lasers (FELs) providing ultra-short and brilliant X-ray pulses pushed the boundaries far beyond what could have been imagined by Röntgen \cite{cloetens1996,emma2010}. One imaging method making use of these capabilities is Coherent Diffractive Imaging (CDI). In CDI, spatially and temporally coherent incoming light is scattered within a sample by a stationary phase, conserving its coherence properties and producing an interference pattern which upon measurement can give spatial information with high temporal and spatial resolution \cite{seibert2011,bostedt2010,barke2015}. Incoherent scattering processes, such as fluorescence, are considered background noise worth suppression or filtering in CDI \cite{schultz2013chapter7}.  On the other hand, various X-ray fluorescence imaging methods use  the created fluorescence for elemental identification while gaining spatial information from scanning the excitation beam or the field of view of the detector \cite{vincze2004,pushie2014}.  X-ray fluorescence holography (XFH) extracts the spatial information from the observed interference between the fluorescence created within a crystalline sample and secondary elastically scattered fluorescence \cite{tegze1996,gog1996}.
 
 Recently, Classen et al. suggested instead to apply the concept of intensity-intensity correlations pioneered by Hanbury Brown Twiss (HBT) in stellar interferometry to fluorescence imaging in a new method they termed \textit{Incoherent Diffractive Imaging} (IDI) \cite{classen2017,hanbury1956}. 
 
 The original  HBT experiments showed that for an incoherent source, the dependence of the correlation between intensities measured with two detectors on their separation encodes spatial information about the source \cite{baym1997}. While in a semi-classical picture this effect can be explained by an averaging out of the instantaneous random phases in the correlation function, the quantum mechanical interpretation has to consider multi-photon states with indistinguishable paths \cite{fano1961,glauber2006}. Thereby the HBT effect famously contradicted the statement by Dirac, that \textit{\enquote{[...] each photon then interferes only with itself. Interference between two different photons never occurs.}} \cite{dirac1958}, and is considered as one of the most influential observations leading to a new understanding of quantum optics and a quantum theory of coherence by Glauber, Mandel et al. \cite{glauber1963,mandel1959, hong1987}.
 
-The main idea behind IDI is leveraging the HBT effect in inner-shell fluorescence for nanoscale imaging: As long as the fluorescence can be recorded in a time interval similar to its coherence time, the phase fluctuation within a single measurement can be considered almost stationary. Thus, averaging over enough pairs of intensities in the far-field and images as separate realizations of the random phases suppresses the random contribution to the phases.  In the multi-photon interference the phase difference resulting from the spatial distribution of the emitters is preserved,  allowing the recovery of the sought-for spatial information about the sample. Distinguishable paths, for example those created by multiple fluorescence energies or arrival time differences greater than the coherence length, will accordingly reduce the contrast of the observed effect \cite{classen2017,trost2020}. 
+The main idea behind IDI is leveraging the HBT effect in inner-shell fluorescence for nanoscale imaging: As long as the fluorescence can be recorded in a time interval similar to its coherence time, the phase fluctuation within a single measurement can be considered almost stationary. Thus, averaging over enough pairs of intensities in the far-field and images as separate realizations of the random phases suppresses the random contribution to the phases.  In the multi-photon interference the phase difference resulting from the spatial distribution of the emitters is preserved,  allowing the recovery of the sought-for spatial information about the sample. In the quantum mechanical interpretation, prerequisite for multi-photon interference is that there are multiple, indistinguishable paths leading to the detection of the photons. Distinguishable paths, for example in IDI those created by emission of multiple fluorescence energies or arrival time differences greater than the coherence length, will accordingly reduce the contrast of the observed effect \cite{classen2017,trost2020,fano1961}. 
 
 For many elements, the cross-section of fluorescence exceeds that of coherent scattering by several orders of magnitude, and the strong anisotropy of coherent scattering leads to the need for high dynamic range detectors in CDI \cite{xraylib,attwood1999}.  Fluorescence, on the other hand, can be recorded in all directions, allowing the use of more detectors with less dynamic range and even the integration in existing CDI setups as a second simultaneous imaging method. Furthermore, while wide-angle CDI in a single orientation only gives limited access to a two-dimensional surface inside the three-dimensional reciprocal space, IDI in the same geometry measures a continuous volume inside the reciprocal space \cite{barke2015,classen2017}. In theory, this allows high-resolution three-dimensional imaging from few orientations. Finally, as the emitted fluorescence energies are highly element dependent, the method has an inherent element specificity. Compared to XFH, IDI does not rely on secondary scattering of the fluorescence, thereby effectively increasing the amount of usable photons and allowing imaging of non crystalline samples. Taken together, IDI promises to enhance the imaging capabilities using FELs significantly. 
 
