--- a/Tex/abstract.tex
+++ b/Tex/abstract.tex
@@ -4,11 +4,11 @@
 	\end{Huge}
 \\
 %Keine Doppelpiunkte
-Recently, a promising high-resolution imaging method termed \textit{Incoherent Diffractive Imaging} (IDI) has been proposed \cite{classen2017}. IDI uses intensity correlations as commonly used in stellar interferometry to extract information from two-photon interference of inner shell fluorescence. As the X-ray photons from different point source must arrive at the detector within the coherence time, ultra-short X-ray pulses available at free-electron lasers (FEL) are used for excitation.   IDI has the potential for nanoscale resolution in three dimensions from few orientations only. Nonetheless, in the only experimental implementation thus far, only the size of the focal spot of the FEL (>100\,nm) has been measured \cite{nakumura2020}.
+Recently, a promising high-resolution imaging method termed \textit{Incoherent Diffractive Imaging} (IDI) has been proposed \cite{classen2017}. IDI uses intensity correlations as initially introduced in stellar interferometry to extract information from two-photon interference of inner shell fluorescence. As the X-ray photons from different point sources must arrive at the detector within the coherence time, ultra-short X-ray pulses available at free-electron lasers (FEL) are used for excitation.   IDI has the potential for nanoscale resolution in three dimensions from few orientations only. Nonetheless, in the only experimental implementation thus far, only the size of the focal spot of the FEL (>100\,nm) has been measured \cite{nakumura2020}.
 
-In the present work, various parameters of the setup are identified by simulations as crucial for experimental success. Most importantly, this includes the pulse duration, focal spot size,  sample thickness, and the number of fluorescence emitters. Further, this work highlights the importance of proper detector alignment and identification and correction of possible misalignment, as well as the handling of detector artifacts. Finally, a photon-counting method with reduced artifacts in the correlations based on a single-pixel maximum likelihood classification is presented. These insights have guided the design and analysis of an experiment performed at the SACLA FEL facility using 10\,fs X-ray pulses for fluorescence excitation.
+In the present work, various parameters of the setup are identified by simulations as crucial for experimental success. Most importantly, this includes the pulse duration, focal spot size,  sample thickness, and the number of fluorescence emitters. Further, this work highlights the importance of proper detector alignment and identification and correction of possible misalignment, as well as the handling of detector artifacts. Finally, a photon-counting method with reduced artifacts in the correlations based on a single-pixel maximum likelihood classification is presented. These insights have guided the design and analysis of an experiment performed at the SACLA FEL facility using 10\,fs X-ray pulses for fluorescence excitation \cite{yabashi2015}.
 
-Here, the results of the previously reported imaging of the focus were reproduced by using iron and copper foils as a sample.  In contrast to the previous work, the fluorescence was recorded perpendicular to the exciting X-ray beam, eliminating the possibility of coherent scattering confounding the measurement. The focal width in the vertical direction achieved by the \textit{100\,exa} nano-focusing system was determined by IDI  as (240$\pm$20)\,nm, in agreement with an independent wire scan measurement. Next, spherical magnetite nanoparticles deposited in polymer matrices were used as nanometer-sized samples. The characterization by small-angle scattering showed undesirable aggregation and reduced visibility of the structure factor. Consequently, no features of the structure factor were recovered by the correlation analysis of the fluorescence speckle patterns.  Finally, the fluorescence patterns of thin gallium arsenide single crystal films were recorded.  An analysis of the visible Kossel lines reduced the misalignment not corrected for to $\pm$0.2°. However, no Bragg peaks could be identified in the IDI reconstruction.
+Here, the results of the previously reported imaging of the focus were reproduced by using iron and copper foils as a sample.  In contrast to the previous work, the fluorescence was recorded perpendicular to the exciting X-ray beam, eliminating the possibility of coherent scattering confounding the measurement. The focal width in the vertical direction achieved by the \textit{100\,exa} nano-focusing system was determined by IDI  as (240$\pm$20)\,nm, in agreement with an independent wire scan measurement \cite{yumoto2020}. Next, spherical magnetite nanoparticles deposited in polymer matrices were used as nanometer-sized samples. The characterization by small-angle scattering showed undesirable aggregation and reduced visibility of the structure factor. Consequently, no features of the structure factor were recovered by the correlation analysis of the fluorescence speckle patterns.  Finally, the fluorescence patterns of thin gallium arsenide single crystal films were recorded.  An analysis of the visible Kossel lines reduced the misalignment not corrected for to $\pm$0.2°. However, none of the expected Bragg peaks could be identified in the IDI reconstruction of the structure factor.
 
 Even though nanoscale resolution could not be achieved, the results obtained guided the design of a recent experiment at LCLS using sub-fs X-ray pulses and less challenging samples.
 
@@ -23,9 +23,10 @@ Even though nanoscale resolution could not be achieved, the results obtained gui
  	\textbf{Kurzfassung}\vspace{12mm}
  \end{Huge}
 \\
-Eine neues Bildgebungsverfahren, \textit{Incoherent Diffractive Imaging}, verspricht mittels der in der  astronomischen Interferometrie gebrächliche Methode der Intensitätskorrelationenen  hochaufgelöste Strukturinformationen in Röntgenfluoreszens zu extrahieren \cite{classen2017}. Da nur Photonen, die innerhalb der Kohärenzzeit detektiert werden, den nötigen Zwei-Photonen-Interferenz  Effekt zeigen, werden ultrakurze Röntgenpulse eines Freie-Elektronen-Laser (FEL) zur Anregung genutzt.  In den bislang einzigen veröffentlichten Ergebnissen dieser Methode wurde nur die Fokalgröße des FELs bestimmt \cite{nakumura2020}.
+Eine neues Bildgebungsverfahren, \textit{Incoherent Diffractive Imaging} (IDI), verspricht mittels der in der  astronomischen Interferometrie gebräuchlich Methode der Intensitätskorrelationenen  hochaufgelöste Strukturinformationen aus Röntgenfluoreszens zu extrahieren \cite{classen2017}. Da nur Photonen, die innerhalb der Kohärenzzeit detektiert werden, den nötigen Zwei-Photonen-Interferenz  Effekt zeigen, werden ultrakurze Röntgenpulse eines Freie-Elektronen-Laser (FEL) zur Anregung genutzt. Erste Ergebnisse von Messungen mit dieser neuen Methode beschränken sich bislang auf die Fokalgröße des FEL-Strahls \cite{nakumura2020}.
 
-In der vorliegenden Arbeit wurden zunächst entscheidende Faktoren für eine Auflösungssteigerung der Methode mittels Simulationen bestimmt. Darauf aufbauend, wurde ein Experiment am SACLA FEL durchgeführt. In diesem wurden K$_\alpha$-Fluoreszenz Specklemuster von Metallfolien, Galliumarsenid Einkristallfolien und in Polymeren eingebetteten Eisennanopartikeln unter Anregung mit 10\,fs Röntgenpulsen vermessen. Aus den Daten der Metallfolien gelang es, die Abbildung des Fokus erfolgreich zu reproduzieren und die vertikale Größe des \textit{100 exa} Nanofokus als (240$\pm$20)\,nm zu bestimmen. Die hergestellen Nanopartikel Proben zeigten in Messung der Kleinwinkelstreuung am SSRL Synchrotron nur schwach ausgeprägte charakteristische Merkmale, diese konnten in der IDI Messung nicht rekonstruiert werden. Mittels Analyse der Kossellinien konnte die Unsicherheit in der Orientierung der Einkristalle auf $\pm$0.2° reduziert werden. In den Rekonstruktionen des Strukturfaktors der Kristalle wurden keine Bragg Peaks identifiziert.
+In der vorliegenden Arbeit wurden zunächst entscheidende Faktoren für eine Auflösungssteigerung der Methode mittels Simulationen bestimmt. Darauf aufbauend, wurde ein Experiment am SACLA FEL durchgeführt \cite{yabashi2015}. In diesem wurden K$_\alpha$-Fluoreszenz Specklemuster von Metallfolien, Galliumarsenid Einkristallfolien und in Polymeren eingebetteten Eisennanopartikeln unter Anregung mit 10\,fs Röntgenpulsen vermessen. Aus den Daten der Metallfolien gelang es, die Abbildung des Fokus erfolgreich zu reproduzieren und die vertikale Größe des \textit{100 exa} Nanofokus als (240$\pm$20)\,nm zu bestimmen \cite{yumoto2020}.  Da die Fluoreszens senkrecht zum einfallenden FEL-Strahl gemessen wurde, kann ausgeschlossen werden, dass die beobachtete Intensitätskorrelation durch kohärente Streuung verursacht wurde.  Die hergestellen Nanopartikel Proben zeigten in Messung der Kleinwinkelstreuung am SSRL Synchrotron nur schwach ausgeprägte charakteristische Merkmale, diese konnten in der IDI Messung nicht rekonstruiert werden. Mittels Analyse der Kossellinien konnte die Unsicherheit in der Orientierung der Einkristalle auf $\pm$0.2° reduziert werden. Jedoch konnten in Rekonstruktionen des Strukturfaktors der Kristalle keine Bragg Peaks identifiziert werden.
 
-Obwohl laut der ausgewerteten Daten bislang keine Nanometer Auflösung erreicht werden konnte, erlaubten die Ergebnisse ein weiteres Experiment, das kürzlich mit sub-Femtosekunden Pulsen und einfacheren Proben am  LCLS FEL durchgeführt wurde zu planen.
+Obwohl laut der ausgewerteten Daten bislang keine Nanometerauflösung erreicht werden konnte,
+erlaubten die Ergebnisse dieser Arbeit die Planung eines weiteren Experimentes, welches kürzlich   mit sub-Femtosekunden Pulsen und weniger anspruchsvollen Proben am  LCLS FEL durchgeführt wurde.
 \end{otherlanguage}
