--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -1,7 +1,7 @@
 \chapter{Experimental Verification}
 \label{chap:experiment}
 
-Using the knowledge gained by the simulation, an experiment at the beamline 3 of the SACLA FEL was performed. The experiment consisted of three parts: First, reproducing the results of Nakumura et al. and imaging projection of the focal volume of the FEL by using metal foils as samples, performing a measurement of the K$_\alpha$  fluorescence and an reconstruction in the small angle regime \cite{nakumura2020}.  Second, moving to a smaller length scale and trying to image nanoparticles. And third, leaving the small angle regime and recording the fluorescence of a single crystal and perform a three dimensional reciprocal space reconstruction. 
+Using the knowledge gained by the simulation, an experiment at the beamline 3 of the SACLA FEL was performed. The experiment consisted of three parts: First, reproducing the results of Nakumura et al. and imaging projection of the focal volume of the FEL by using metal foils as samples, performing a measurement of the K$_\alpha$  fluorescence and a reconstruction in the small angle regime \cite{nakumura2020}.  Second, moving to a smaller length scale and trying to image nanoparticles. And third, leaving the small angle regime and recording the fluorescence of a single crystal and perform a three-dimensional reciprocal space reconstruction. 
 %XXX Bekannte samples
 %% different geometry
 
@@ -9,7 +9,7 @@ In this chapter, the sample preparation and characterization by small angle scat
 
 \section{Sample Preparation and Characterization}
 As a nanoparticle sample, spherical iron oxide  (magnetite) nanoparticles were chosen for their commercial availability in high quality. For the sample delivery method, deposition in polymer matrices was chosen to simplify finding the spatial overlap between the FEL beam and the sample (compared to for example injectors) and to require little changes in the setup to switch between the metal foils and the nanoparticle sample. 
-Galliumarsnide (GaAS) was chosen as a crystalline sample for its comparatively simple structure and large product its lattice constant and the gallium K${_\alpha}$ fluorescence energy, resulting in lower scattering angles necessary to record the Bragg peaks compared to other commonly used single crystals. 
+Gallium arsenide (GaAs) was chosen as a crystalline sample for its comparatively simple structure and large product of its lattice constant and the gallium K${_\alpha}$ fluorescence energy, resulting in lower scattering angles necessary to record the Bragg peaks compared to other commonly used single crystals. 
 
 \subsection{Magnetite Nanoparticle in Polymer Samples}
 To allow (statistically) multiple particles inside the focus to improve the number of detected fluorescence photons per FEL shot and greatly reduced the possibility of having shots without any particles inside the focus as well, the following preparation was developed:
@@ -19,7 +19,7 @@ Magnetite nanoparticles coated with oleic acid and dispersed in toluene were bou
 The nanoparticles were precipitated with methanol, centrifuged and redispersed in chloroform at a concentration of 25\,mg/ml, with the weight of nanoparticles including the weight of the oleic acid capping. Polystyrene was dissolved in chloroform at a concentration of 250\,mg/ml. 
 To each of 700\,\textmu l solution of 5\,nm nanoparticles, 500\,\textmu l solution of 10\,nm nanoparticles and 425\,\textmu l solution of 20\,nm nanoparticles, respectively, 5\,ml of the polystyrene solution were added, approximatly accounting for the different iron concentration in the solutions.  After ensuring dispersion by strong sonication, fractions of 100\,\textmu l the solution were carefully dropped onto slowly at 100\,rpm spinning glass cover slips (20\,mm x 20\,mm). After drying, the approximately 200\,\textmu m thick films were removed from the glass slides.
 
-As a control sample with approximately equal iron concentration, 60\,mg FeCl3 and 25\,g polystyrene were dissolved in 10\,ml acetone, sonicated and  fractions of 100\,\textmu l were dropped onto slowly spinning glass slides  and carefully removed after drying.
+As a control sample with approximately equal iron concentration, 60\,mg FeCl$_{3}$ and 25\,g polystyrene were dissolved in 10\,ml acetone, sonicated and  fractions of 100\,\textmu l were dropped onto slowly spinning glass slides  and carefully removed after drying.
 %\begin{table}[tp]
 %	\centering
 %	\caption{Nanoparticles in polystyrene recipes}
@@ -42,7 +42,7 @@ The nanoparticle solutions as bought were concentrated to 25\,mg/ml in toluene b
 The vials were uncapped and the polymer dried for 12h at 50°C. The polymer was removed from the vials and cut into slices of approximately (150$\pm$20)\,\textmu m thickness using a slow spinning diamond saw.
 As a control sample, the polymerization was performed without any nanoparticles added.
 
-\begin{table}[tp]
+\begin{table}
 	\centering
 	\caption{Nanoparticles in PMMA/EHMA recipes}
 	\label{tab:sampleCP}
@@ -60,9 +60,9 @@ As a control sample, the polymerization was performed without any nanoparticles 
 \end{table}
 
 \paragraph{Nanoparticle Sample Characterisation}
-To characterize the nanoparticles before the embedding in a polymer, the iron oxide nanoparticles as received were diluted with toluene, deposited on a silicon nitride membrane and imaged using a FEI Tecnai microscope  (see \fref{fig:tem}).  For each of the three nominal sizes, 3 different areas on the membrane were analyzed using ImageJ, resulting in mean radii of 8.3$\pm$1.7\,nm (nominal \enquote{20\,nm} diameter), 4.1$\pm$0.8 \,nm	(\enquote{10\,nm} diameter) and 3.1$\pm$0.6\,nm (\enquote{5\,nm}), respectively. In the TEM images, the effect of the oleic acid ligands used to stabilize the nanoparticle dispersion can be seen as the inter-particle distance.
+To characterize the nanoparticles before the embedding in a polymer, the iron oxide nanoparticles as received were diluted with toluene, deposited on a silicon nitride membrane and imaged using a FEI Tecnai microscope  (see \fref{fig:tem}).  For each of the three nominal sizes, 3 different areas on the membrane were analyzed using ImageJ, resulting in mean radii of 8.3$\pm$1.7\,nm (nominal \enquote{20\,nm} diameter), 4.1$\pm$0.8 \,nm	(\enquote{10\,nm} diameter) and 3.1$\pm$0.6\,nm (\enquote{5\,nm}), respectively. In the TEM images, the effect of the oleic acid ligands used to stabilize the nanoparticle dispersion can be seen as the inter particle distance.
 
-\begin{figure}[tp]
+\begin{figure}
 	\centering
 	\begin{subfigure}[b]{0.25\textwidth}
 		\includegraphics[width=\linewidth]{images/tem5.png}
@@ -87,48 +87,43 @@ To characterize the nanoparticles before the embedding in a polymer, the iron ox
 \label{fig:tem}
 \end{figure}
 
-SAXS (small angle X-ray scattering) measurements of the prepared nanoparticle polymer foils were performed at the SSRL beamline 1-5. Samples were measured at 12\,keV  at two different spots for 5\,min each and averaged. A subtraction of the separately meassured polymer matrix background was performed and a size distribution of spherical particles with hard-sphere interaction fitted to the radial profile. The low-q area in the measurement is dominated by aggregate formation, which cannot be precisely quantified due to stray light and limited measuring range and is modeled for by a Guinier-Porod function, see \fref{fig:saxsps}  and  \fref{fig:saxspmma} \cite{percus1958,feigin1987,Ilavsky2009}.
+SAXS (small angle X-ray scattering) measurements of the prepared nanoparticle polymer foils were performed at the SSRL beamline 1-5. Samples were measured at 12\,keV  at two different spots for 5\,min each and averaged. A subtraction of the separately meassured polymer matrix background was performed and a size distribution of spherical particles with hard-sphere interaction fitted to the radial profile. The low-q area in the measurement is dominated by aggregate formation, which cannot be precisely quantified due to stray light and limited measuring range and is modeled for by a Guinier-Porod function, see \fref{fig:saxsps}  \cite{percus1958,feigin1987,Ilavsky2009}.
 The measurements do not show a clear and significant difference between the two polymer matrices. According to the regressions, the aggregates seem to have a radius of gyration of 20-30\,nm (the straylight limits the measurement validity in those small q areas) in both matrices, the Porod parameter $P$ of 2.5-3.8 suggests a dimensionality of the aggregates between 2 and 3 \cite{feigin1987,lili2005}. The radii of the form factor agree within the corresponding margin of error with the values determined by TEM measurements. The difference between the radius parameters of the structure factors and the form factor is most likely caused by the thin layer of oleic acid ligands between aggregating particles.
 
-
-\begin{figure}[tp]
+\begin{figure}
 	\centering
-	\begin{subfigure}[b]{0.3\textwidth}
+	\begin{subfigure}[b]{0.4\textwidth}
 		\includegraphics[width=\linewidth]{images/ps5.pdf}
 	\end{subfigure}
-	\begin{subfigure}[b]{0.3\textwidth}
-		\includegraphics[width=\linewidth]{images/ps10.pdf}
-	\end{subfigure}
-	\begin{subfigure}[b]{0.3\textwidth}
-		\includegraphics[width=\linewidth]{images/ps20.pdf}
-	\end{subfigure}
-
-	\caption[SAXS profile of iron oxide nanoparticles in polystyrene matrix]{SAXS profiles of nominal 5\,nm, 10\,nm and 20\,nm iron oxide nanoparticles in polystyrene matrix (left to right).}
-	\label{fig:saxsps}
-\end{figure}
-\begin{figure}[tp]
-	\centering
-	\begin{subfigure}[b]{0.3\textwidth}
+	\begin{subfigure}[b]{0.42\textwidth}
 		\includegraphics[width=\linewidth]{images/pmma5.pdf}
 	\end{subfigure}
-	\begin{subfigure}[b]{0.3\textwidth}
+
+	\begin{subfigure}[b]{0.42\textwidth}
+		\includegraphics[width=\linewidth]{images/ps10.pdf}
+	\end{subfigure}
+	\begin{subfigure}[b]{0.42\textwidth}
 		\includegraphics[width=\linewidth]{images/pmma10.pdf}
 	\end{subfigure}
-	\begin{subfigure}[b]{0.3\textwidth}
-		\includegraphics[width=\linewidth]{images/pmma20.pdf}
+
+	\begin{subfigure}[b]{0.42\textwidth}
+		\includegraphics[width=\linewidth]{images/ps20.pdf}
 	\end{subfigure}
-	
-	\caption[SAXS profile of iron oxide nanoparticles in  Poly-(EHMA/MMA) matrix]{SAXS profiles of nominal 5\,nm, 10\,nm and 20\,nm iron oxide nanoparticles in Poly-(EHMA/MMA) matrix (left to right).}
-	\label{fig:saxspmma}
+	\begin{subfigure}[b]{0.42\textwidth}
+	\includegraphics[width=\linewidth]{images/pmma20.pdf}
+	\end{subfigure}
+	\caption[SAXS profile of iron oxide nanoparticles in polymer matrices]{SAXS profiles of nominal 5\,nm, 10\,nm and 20\,nm (top to bottom) iron oxide nanoparticles in polystyrene matrix (left) and poly-(methyl methacrylate / etylhexyl methacrylate) matrix (right) showing aggregation of the nanoparticles within the sample.}
+	\label{fig:saxsps}
 \end{figure}
-\subsection{Galliumarsenide Crystal Films}
+
+\subsection{Gallium Arsenide Crystal Films}
 The samples were prepared by Ben Reeves at the Stanford Nanofabrication Facility.
-Using MOCVD, 50\,nm GaAs, 400\,nm AlGaAs as an etch stop and finally a 5\,\textmu m GaAs film were grown on an epi-ready (100)±0.1° GaAs substrate. The specimen was cut into 12\,mm\,x\,15\,mm pieces, each glued to an approx. 100\,\textmu m thick fused silica cover slip with the 5\,\textmu m film layer facing towards the silica. The substrate and the AlGaAs layer were selectively etched away via C6H8O7:H2O2 and HF:H2O wet etches, respectively. This left 5\,\textmu m thin GaAs films glued onto the the silica slides (see \fref{fig:gaas_sample}). 
-A X-ray diffraction $\omega$-scan with copper K$\alpha$ (PANAlytical X’Pert Pro) shows the FWHM width of the (004) GaAs Bragg peak after mounting on the silica slides as 0.004°, indicative of high quality single crystals. 
+Using MOCVD, 50\,nm GaAs, 400\,nm AlGaAs as an etch stop and finally a 5\,\textmu m GaAs film were grown on an epi-ready (100)±0.1° GaAs substrate. The specimen was cut into 12\,mm\,x\,15\,mm pieces, each glued to an approx. 100\,\textmu m thick fused silica cover slip with the 5\,\textmu m film layer facing towards the silica. The substrate and the AlGaAs layer were selectively etched away via C6H8O7:H2O2 and HF:H2O wet etches, respectively. This left 5\,\textmu m thin GaAs films glued onto the silica slides (see \fref{fig:gaas_sample}). 
+A X-ray diffraction $\omega$-scan with copper K$_\alpha$ (PANAlytical X’Pert Pro) shows the FWHM width of the (004) GaAs Bragg peak after mounting on the silica slides as 0.004°, indicative of high quality single crystals. 
 
 
 
-\begin{figure}[tp]
+\begin{figure}
 	\centering
 	\includegraphics[width=0.8\linewidth]{images/gaas_sample.pdf}
 	\caption[GaAs sample]{Sketch of the GaAs single crystal glued to a fused silica cover slip and Cu-K$\alpha$ XRD measurement of the GaAs (004) reflex, performed by B. Reeves, showing a single crystal. After mounting on the cover slip, the peak is slightly broadened, most likely by an slightly uneven thickness of the glue layer  leading to bending of the thin crystal.}
@@ -151,7 +146,7 @@ The samples were scanned with a mean step size of 20\,\textmu m in horizontal di
 \begin{figure}
 	\centering
 	\includegraphics[width=0.75\linewidth]{images/setup.pdf}
-	\caption[Experimental setup at SACLA]{Experimental setup at SACLA: The sample is mounted on a scanning stage and aligned to stay in focus during the scan and be parallel to the octal MPCCD detector, which is in a distance $d_{octal}$. The angle between incoming FEL and Sample is 45°. Behind the sample, a stray light filter, beamstop and (depending on the sample) a filter foil is installed. The dual detector is mounted $d_{dual}$=1\,m away from the sample perpendicular the the FEL beam. To reduce air scattering, a vacuum tube is installed in the path from sample to dual.}
+	\caption[Experimental setup at SACLA]{Experimental setup at SACLA: The sample is mounted on a scanning stage and aligned to stay in focus during the scan and be parallel to the octal MPCCD detector, which is in a distance $d_{octal}$. The angle between incoming FEL and Sample is 45°. Behind the sample, a stray light filter, beamstop and (depending on the sample) a filter foil is installed. The dual detector is mounted $d_{dual}$=1\,m away from the sample perpendicular the FEL beam. To reduce air scattering, a vacuum tube is installed in the path from sample to dual.}
 	\label{fig:setup}
 \end{figure}
 \paragraph{Imaging the Focus}
@@ -176,7 +171,7 @@ On some of the samples, areas can be identified where the relative fluorescence 
 
 \begin{figure}
 	\centering
-	\includegraphics[width=0.8\linewidth]{images/xrf.png}
+	\includegraphics[width=0.75\linewidth]{images/xrf.png}
 	\caption[Relative intensity of the 6 keV and 8 keV photon peak on the detector for different scanning positions on one sample]{Exemplary relative intensity of the 6 keV and 8 keV photon peak on the detector for different scanning positions on the sample. This is similar to X-ray fluorescence imaging experiments commonly performed at synchrotrons. In this iron sample, a localized impurity, most likely copper, is clearly visible and can be discarded from further analysis.}
 	\label{fig:xrf}
 \end{figure}
@@ -201,12 +196,12 @@ Masks for both detectors were created based on the standard deviation over diffe
 During the experiment, an unnoticed failure of the electronics of the octal detector occurred, manifesting as periodic noise on most of the detector tiles at a much higher level than expected (see \fref{fig:octalissue} for an illustration). Not all columns of a tile or read-out port were affected, in contrast to common-mode effects more commonly encountered with CCD detectors. As the overall affected area of the detector is substantial and the noise leaks through the photon counting scheme by slightly influencing the probability of a pixel being considered a photon hit, causing correlations and therefore artifacts in the reconstruction in one direction, a correction was applied to the affected columns of affected tiles of the detector. For the correction, affected columns were first identified by filtering on the Fourier transform, neighboring effected columns are considered as a block and the medians over those blocks were calculated and subtracted. This scheme was chosen instead of the more commonly used portwise common mode correction due to the uneven strength of the artifact (see \fref{fig:app_correction} for a comparison). Using this correction reduced the artifact, but did not completely remove it. As the remaining artifact in the reconstructions is limited to low $q$ compared to the expected positions of the features of the samples and only two orthogonal lines, it can be masked out.
 
 
-\begin{figure}[tp]
+\begin{figure}
 	\centering
-	\begin{subfigure}[b]{0.45\textwidth}
+	\begin{subfigure}[b]{0.48\textwidth}
 		\includegraphics[width=\linewidth]{images/octalissue2.png}
 	\end{subfigure}
-	\begin{subfigure}[b]{0.45\textwidth}
+	\begin{subfigure}[b]{0.48\textwidth}
 		\includegraphics[width=\linewidth]{images/octalissue.png}
 	\end{subfigure}
 	
@@ -233,17 +228,6 @@ Before doing the reconstruction, a final filtering pass was performed on the ima
 
 
 
-
-%XXX
-%As shown in \fref{fig:spectrum}, the background corrected and masked spectrum of the detector shows peaks at multiples of the %fluorescence and excitation energy with a FWHM of .... . 
-
-
-%As discussed in \fref{chap:simulation}, the number of fluorescence photons can be estimated...
-
-
-% Raw Data
-% Spectrum
-% Peaks
 
 
 \paragraph{Crystal orientation}
@@ -272,8 +256,8 @@ $\vec{q}$ a reciprocal lattice vector and element of the allowed reflections $Q$
 
 
 \subsection{Reconstruction}
-For the foil data, the small angle approximation is valid and each pixel approximately covers the  same solid angle, permitting the use of a pixelwise correlation after normalization as described in \fref{sec:normal} for the reconstruction of $|S(q)|^2$. For the nanoparticle data, the maximum recorded angles are higher and at the limit of the small angle regime, resulting in $\delta q_x,_y$ between neighboring pixels being lower for pixels further of axis. As the features in the structure factor are at relatively low $q$, the difference are less than the $q$ resolution and the same reconstruction can be used.
- For the wide-angle crystal data, a full three dimensional correlation of the rotation and offset corrected data was performed using the resampled FFT-based approach described in \fref{sec:corr}. This takes the varying solid angles fully into account.
+For the foil data, the small-angle approximation is valid, and each pixel approximately covers the same solid angle, permitting the use of a pixel-wise correlation after normalization as described in \fref{sec:normal} for the reconstruction of $|S(q)|^2$. For the nanoparticle data, the maximum recorded angles are higher and at the limit of the small-angle regime, resulting in $\delta q_x,_y$ between neighboring pixels being lower for pixels further off-axis. However, as the features in the structure factor are at relatively low $q$, the difference is less than the $q$ resolution, and the same reconstruction can be used.
+For the wide-angle crystal data, a full three-dimensional correlation of the rotation and offset corrected data was performed using the resampled FFT-based approach described in \fref{sec:corr}. This takes the varying solid angles fully into account.
 
 
 \section{Results of the Experiment}
@@ -297,19 +281,21 @@ The reconstructions were performed once without discretization and only applying
 \end{figure}
 
 
-The excited volume can be approximated in horizontal direction as a rectangular function with a width of $\sqrt{2}$-times the thickness of the foil used, due to the 45° angle, as the horizontal FWHM of the focus is much smaller than the thickness of the foil and ignoring absorption.  In the vertical direction, the volume is limited by the FWHM of the focus and can be roughly approximated to be Gaussian. 
+The excited volume can be approximated in the horizontal direction as a rectangular function with a width of $\sqrt{2}$-times the thickness of the foil used, due to the 45° angle, as the horizontal FWHM of the focus is much smaller than the thickness of the foil and ignoring absorption.  In the vertical direction, the volume is limited by the FWHM of the focus and can be roughly approximated to be Gaussian. 
 In a small-angle approximation, the reconstruction is the magnitude squared of the 2D Fourier transform of the volume. As the magnitude squared of the Fourier transform of a Gaussian with FWHM $f$ is another Gaussian with FWHM $\frac{4\sqrt{2}\log{2}}{f}$ and of a rectangular function\footnote{If the foil were thicker, the absorption length $a$ could not be ignored and the more complicated $\left|\mathscr{F}\left(e^{-\frac{x}{a}} \Pi \left(\frac{x}{w}\right)\right)\right|^2 \propto \frac{\cosh \left(\frac{w}{a}\right)-\cos (q w)}{a^2 q^2+1}$
 	could be used instead.} with width $w$ is proportional to $\sinc^2{\left(\frac{q w}{2}\right)}$, a 2D least-squares regression of the product of those functions is performed on the reconstructed image to estimate the focal FWHM \cite{butz2015}. As the horizontal direction is under-sampled, the horizontal profile will not be resolved in the reconstruction.  The function used for the regression is sampled at 25x the resolution in both directions and averaged. This corresponds to a convolution with a rectangular sampling kernel and reduces the effect of undersampling on the values determined by the regression. Furthermore, a rotation parameter is introduced to account for a slight misalignment of the detector.
 
 For a 5\,\textmu m Copper foil placed at three different positions, at the nominal focus and two positions further upstream, results of the auto-correlation reconstruction are shown in \fref{fig:Cu5umreco2d}.
-The regression estimates of the focal width in the vertical direction at the nominal focus position along the beam as (240$\pm$20)\,nm and while defocused by 250\,\textmu m as (380$\pm$40)\, nm. The stated errors only include regression uncertainty. The determined width at the focal position is in good agreement with the width determined by the wirescan, (210$\pm$ 10)\,nm. In \fref{fig:fereco2d} the results for 10\,\textmu m and 500\,nm iron foils as well as an example of the result of the regression is shown. As the 5\,\textmu m and 10\,\textmu m foils suffer from severe undersampling along the horizontal direction, only for the 500\,nm iron foil (\fref{fig:fe500nmreco2d}) the regression of the width in this axis can be performed. The regression estimates the width of the emitting volume in focal position as (500$\pm$250)\,nm in the horizontal direction, agreeing with the expected value of (500$\cdot\sqrt{2})$\,nm.
+The regression in these results estimates of the focal width in the vertical direction at the nominal focus position along the beam as (240$\pm$20)\,nm and while defocused by 250\,\textmu m as (380$\pm$40)\, nm. The stated errors only include regression uncertainty. The determined width at the focal position is in good agreement with the width determined by the wire scan, (210$\pm$ 10)\,nm. In \fref{fig:fereco2d} the results for 10\,\textmu m and 500\,nm iron foils as well as an example of the result of the regression is shown. As the 5\,\textmu m and 10\,\textmu m foils suffer from severe undersampling along the horizontal direction, only for the 500\,nm iron foil (\fref{fig:fe500nmreco2d}) the regression of the width in this axis can be performed. The regression estimates the width of the emitting volume in focal position as (500$\pm$250)\,nm in the horizontal direction, agreeing with the expected value of (500$\cdot\sqrt{2})$\,nm.
+
+A comparison of the intensity correlations of shots recorded at different pulse energies, as reported by the upstream energy monitors, shows that for low reported energies the amplitude of the correlations is lower (see \fref{fig:energy_binned}). This confirms the decision to use the energy measurement as a surrogate parameter for pulse length and as a filtering criterion \cite{inoue2019}.
 
 Nevertheless, for all three foils in focal position the signal amplitude can be extrapolated by the regression as 0.004$\pm$0.001 with no significant difference between the samples.
 The noise levels as estimated by the standard deviation over pixels outside the feature containing region of interest are  0.00013 for the copper foil, 0.0002 for the iron 10\,\textmu m foil, and 0.002 for the iron 500\,nm foil. The mean over the regions of interest of standard errors of the mean over the different shots used in the reconstruction are equal to these as well.
-
+\vspace*{1cm}
 \begin{figure}
 	\centering
-	\includegraphics[width=0.95\linewidth]{images/Cu5um_reco2d.pdf}
+	\includegraphics[width=0.99\linewidth]{images/Cu5um_reco2d.pdf}
 	\caption[Results copper foil]{Results of the $g^2-1$ calculation for the 5\,\textmu m copper foil placed at the focus as well as at two positions outside the focus (along the X-ray beam). As the focal width increases due to the defocusing, its extent in the reconstructed reciprocal space decreases until at -500\,\textmu m defocus it can no longer be reconstructed. The narrow extent in horizontal direction in reciprocal spaces causes undersampling and contrast reduction. }
 	\label{fig:Cu5umreco2d}
 \end{figure}
@@ -346,39 +332,40 @@ The noise levels as estimated by the standard deviation over pixels outside the 
 	\end{subfigure}
 	\begin{subfigure}[b]{\textwidth}
 		\begin{subfigure}[b]{0.49\textwidth}
-		\includegraphics[width=\linewidth]{images/nano.pdf}
+			\includegraphics[width=\linewidth]{images/nano.pdf}
 		\end{subfigure}
 		\begin{subfigure}[b]{0.49\textwidth}
-		\includegraphics[width=\linewidth]{images/nano_loglog.pdf}
+			\includegraphics[width=\linewidth]{images/nano_loglog.pdf}
+		\end{subfigure}
+		\caption{Radial profiles of $g^2$ for different nanoparticle samples.}
+		\label{fig:resnanorad}
 	\end{subfigure}
-			\caption{Radial profiles of $g^2$ for different nanoparticle samples.}
-			\end{subfigure}
-	\label{fig:resnanorad}
+
 	\caption[Results nanoparticles]{\textbf{(a)} 2d images of the calculated $g^2$ of fluorescence patterns recorded on the octal detector of two nanoparticle-in-copolymer samples with 10\,nm and 20\,nm nominal diameter in comparison to two different baseline samples, (mostly homogeneous in the polymer distributed) iron chloride and the polymer matrix without any added iron. The detector artifacts are almost completely removed in those images. \textbf{(b)} Radial profiles of the calculated $g^2$ of two differently sized nanoparticles in the two different polymer matrices after applying a linear Savitzky-Golay filter (window 3 pixel $\overset{\scriptscriptstyle\wedge}{=}$ 0.02\,nm$^{-1}$). The color bands denote the standard error of the radial mean. None of the expected features are clearly visible in the reconstruction. }
-	\label{fig:resnano}
+	%\label{fig:resnano}
 \end{figure}
 
-The mean number of counted signal photons per pixel after filtering is $0.03\pm0.01$ for the nanoparticle samples as well as the iron chloride reference sample, the number of images analyzed has been limited to 30,000 for each sample, with the exception of the \enquote{10\,nm in PS} sample only having 25,000 usable shots after filtering. At similar signal photon counts on the octal as observed for the foils on the dual detector, the peak in the spectrum at the energy of the FEL beam is more pronounced, leading to difficulties distinguishing higher numbers of photons. Hence, only one and two photon hits are used in the photon discretization (see \fref{fig:spectrum_nano} for an example).
+The mean number of counted signal photons per pixel after filtering is $0.03\pm0.01$ for the nanoparticle samples as well as the iron chloride reference sample. The number of images analyzed has been limited to 30,000 for each sample, except for the \enquote{10\,nm in PS} sample only having 25,000 usable shots after filtering. At similar signal photon counts on the octal as observed for the foils on the dual detector, the peak in the spectrum at the energy of the FEL beam is more pronounced, leading to difficulties distinguishing higher numbers of photons. Hence, only one and two-photon hits are used in the photon discretization (see \fref{fig:spectrum_nano} for an example).
 
-Using a sample with just the polymer, without any added iron (neither nanoparticles nor atomic), the influence of air scattering on the correlations can be examined, and in the results of the iron chloride sample having similar numbers of signal photons the effect of uncorrected detector artifacts could be seen. Neither result in a strong correlation signal (see \fref{fig:resnano2d}). The strength of the noise as quantified by the standard deviation over pixels outside the center area of the 2d-reconstruction of the samples is (1.4$\pm$0.1)$\cdot$10$^{-4}$.
+Using a sample with just the polymer, without any added iron (neither nanoparticles nor atomic), the influence of air scattering on the correlations can be examined. In the results of the iron chloride sample having similar numbers of signal photons, the effect of uncorrected detector artifacts could be seen. Neither result show a strong correlation signal (see \fref{fig:resnano2d}). The strength of the noise as quantified by the standard deviation over pixels outside the center area of the 2d-reconstruction of the samples is (1.4$\pm$0.1)$\cdot$10$^{-4}$.
 
-In the radially averaged $g^2$ of the four different samples neither a feature corresponding to the distance of aggregated particles (as visible in the SAXS measurements)  nor a minimum at $q\approx4.5/r$, indicative of spherical samples, can be distinguished. 
+In the radially averaged $g^2$ of the four different samples (shown in \fref{fig:resnanorad}) neither a feature corresponding to the distance of aggregated particles, as visible in the SAXS measurements, nor a minimum at $q\approx4.5/r$, indicative of spherical samples, can be distinguished. 
 \FloatBarrier
 \subsection{Imaging Crystals}
 
-After applying the filtering, masking and corrections, the mean photon count considered as signal per pixel is 0.4-0.6 for both samples (a histogram is shown in \fref{fig:spectrum_gaas}), corresponding to $\approx 3\cdot10^7$ photons in $4\pi$ and $\approx$1\% of the gallium atoms inside the focus emitting fluorescence. Overall, $2\cdot10^4$ images per sample remain and can be used for further analysis.
+After applying the filtering, masking, and corrections, the mean photon count considered as signal per pixel is 0.4-0.6 for both samples (a histogram is shown in \fref{fig:spectrum_gaas}), corresponding to $\approx 3\cdot10^7$ photons in $4\pi$ and $\approx$1\% of the gallium atoms inside the focus emitting fluorescence. Overall, $2\cdot10^4$ images per sample remain and can be used for further analysis.
 
 For the determination of the crystal orientation and detector offsets, the regression parameters are initialized with a 5.65\,\AA\, lattice constant, 9.25\,keV energy, 14\,cm detector distance and the result of a 2D cubic fit to the fluorescence background for the values of the x- and y-shifts. The  lines considered are shown in \fref{fig:kosselgaaslines} and listed in \fref{tab:kosselpeaks}. The results are shown in \fref{tab:kosselfit} as mean over the sets for each sample and maximum deviation from the mean as an error estimation. Overall, the alignment is precise up to at most than 0.6° rotation, except for rotation in the plane parallel to the crystal surface (designated \textit{roll}), and 140\,pixel translation.
 
 \begin{figure}
 	\centering
 	\begin{subfigure}{0.35\textwidth}
-		\includegraphics[width=\linewidth]{images/kossel_gaas1r.pdf}
+		\includegraphics[width=\linewidth]{images/kosselgaas1.png}
 		\caption{Indexed lines on sample 1}
 	\end{subfigure}
 	\hspace{0.2cm}
 	\begin{subfigure}{0.35\textwidth}
-		\includegraphics[width=\linewidth]{images/kossel_gaas2r.pdf}
+		\includegraphics[width=\linewidth]{images/kosselgaas2.png}
 		\caption{Indexed lines on sample 2}
 	\end{subfigure}
 	\caption[Kossel lines on GaAs samples]{Indexed Kossel lines in the determined orientation overlaid over the mean of 5000 shots after background subtraction. For a list of all considered indices, see  \fref{tab:kosselpeaks}.}
@@ -401,32 +388,32 @@ For the determination of the crystal orientation and detector offsets, the regre
 	\label{tab:kosselfit}
 \end{table}
 
-Using the determined rotation and translation to determine for each pixel the corresponding $\vec{q}$ and performing the corrected reconstruction (averaging over all images left after filtering) results in a volume of 3750\,x\,4032\,x\,500 pixels$^3$ with maximum extent of approx. $\pm$3\,x\,$\pm$3\,x\,0.5 \AA$^{-3}$. The non-trivial shape of the reconstructed volume is influenced by the the placement of the 8 individual tiles of the detector, the applied mask to each tile as well as the overall detector offset and slight rotation.
+Using the determined rotation and translation to determine for each pixel the corresponding $\vec{q}$ and performing the corrected reconstruction (averaging over all images left after filtering) results in a volume of 3750\,x\,4032\,x\,500 pixels$^3$ with maximum extent of approx. $\pm$3\,x\,$\pm$3\,x\,0.5 \AA$^{-3}$. The non-trivial shape of the reconstructed volume is influenced by the placement of the eight individual tiles of the detector, the applied mask to each tile, and the overall detector offset and slight rotation.
 
- In slices in the $q_z=$\,0\,nm$^{-1}$ plane, Bragg peaks with an Laue index $h=0$ should be visible. As the determined detector rotation has an estimated uncertainty of approximately $\pm$0.2° in each direction, maximum intensity projections along 10 $q_z$ slices (up to $q_z\approx$\,0.15\,nm$^{-1}$) are shown in \fref{fig:resgaas1} to ensure Bragg peaks slightly rotated out the of the plane would still be visible. Marked areas in the overview on the left are shown in detail on the right. The noise level in the regions of interest around the expected Bragg peak positions estimated from the standard deviation over all pixels in the regions is 0.0002$\pm$0.0001.  No Bragg peaks are clearly distinguishable, i.e. higher than 4$\sigma$,  in the result. Similar results for the 45° rotated second sample are shown in \fref{fig:resgaas2}. In both results, the noise level increases in areas with fewer pairs of pixels of the masked detector image contributing, areas with less than 100 pairs are masked and not shown.
- 
- \begin{figure}
-\begin{subfigure}[b]{\textwidth}
-	\centering
-	\begin{subfigure}[b]{0.57\textwidth}
-		\includegraphics[width=\linewidth]{images/gaas1_overview.pdf}
+In slices in the $q_z=$\,0\,nm$^{-1}$ plane, Bragg peaks with a Laue index $h=0$ should be visible. As the determined detector rotation has an estimated uncertainty of approximately $\pm$0.2° in each direction, maximum intensity projections along 10 $q_z$ slices (up to $q_z\approx$\,0.15\,nm$^{-1}$) are shown in \fref{fig:resgaas1} to ensure Bragg peaks slightly rotated out the of the plane would still be visible. Marked areas in the overview on the left are shown in detail on the right. The noise level in the regions of interest around the expected Bragg peak positions estimated from the standard deviation over all pixels in the regions is 0.0002$\pm$0.0001.  No Bragg peaks are clearly distinguishable, i.e., higher than 4$\sigma$,  in the result. Similar results for the second, 45° rotated, sample are shown in \fref{fig:resgaas2}. In both results, the noise level increases in areas with fewer pairs of pixels of the masked detector image contributing, areas with less than 100 pairs are masked and not shown.
+
+\begin{figure}
+	\begin{subfigure}[b]{\textwidth}
+		\centering
+		\begin{subfigure}[b]{0.57\textwidth}
+			\includegraphics[width=\linewidth]{images/gaas1_overview.pdf}
+		\end{subfigure}
+		\begin{subfigure}[b]{0.42\textwidth}
+			\includegraphics[width=\linewidth]{images/gaas1_zoom.pdf}
+		\end{subfigure}
+		\caption[Results GaAs Sample 1]{GaAs sample 1}
+		\label{fig:resgaas1}
 	\end{subfigure}
-	\begin{subfigure}[b]{0.42\textwidth}
-		\includegraphics[width=\linewidth]{images/gaas1_zoom.pdf}
+	\begin{subfigure}[b]{\textwidth}
+		\centering
+		\begin{subfigure}[b]{0.57\textwidth}
+			\includegraphics[width=\linewidth]{images/gaas2_overview.pdf}
+		\end{subfigure}
+		\begin{subfigure}[b]{0.42\textwidth}
+			\includegraphics[width=\linewidth]{images/gaas2_zoom.pdf}
+		\end{subfigure}
+		\caption[Results GaAs Sample 2]{Gaas sample 2}
+		\label{fig:resgaas2}
 	\end{subfigure}
-	\caption[Results GaAs Sample 1]{GaAs sample 1}
-	\label{fig:resgaas1}
-\end{subfigure}
-\begin{subfigure}[b]{\textwidth}
-	\centering
-	\begin{subfigure}[b]{0.57\textwidth}
-		\includegraphics[width=\linewidth]{images/gaas2_overview.pdf}
-	\end{subfigure}
-	\begin{subfigure}[b]{0.42\textwidth}
-		\includegraphics[width=\linewidth]{images/gaas2_zoom.pdf}
-	\end{subfigure}
-	\caption[Results GaAs Sample 2]{Gaas sample 2}
-	\label{fig:resgaas2}
-\end{subfigure}
 	\caption[Results GaAs Samples]{Result of the $g^2$  calculation for the GaAs single crystal samples.  MIP from $q_z$=0\,nm$^{-1}$ to 0.3\,nm$^{-1}$. Marked areas in the overview on the left around expected positions of Bragg peaks are shown in detail on the right (labeled by the corresponding Laue indices). The crystal in sample 2 is 45° rotated compared to sample 1, leading to less Bragg positions being inside the reconstructed plane. No Bragg peaks are  clearly distinguishable in the result.}
- \end{figure}
+\end{figure}
