--- a/Tex/ffz.bib
+++ b/Tex/ffz.bib
@@ -1660,6 +1660,76 @@ with relatively short life spans.},
   publisher = {American Physical Society},
 }
 
+@Article{hanbury1954,
+  author    = {R. Hanbury Brown and R.Q. Twiss},
+  journal   = {The London, Edinburgh, and Dublin Philosophical Magazine and Journal of Science},
+  title     = {LXXIV. A new type of interferometer for use in radio astronomy},
+  year      = {1954},
+  number    = {366},
+  pages     = {663-682},
+  volume    = {45},
+  doi       = {10.1080/14786440708520475},
+  publisher = {Taylor & Francis},
+}
+
+@Article{hanbury1956inter,
+  author  = {R. Hanbury Brown and R. Q. Twiss},
+  journal = {Nature},
+  title   = {A Test of a New Type of Stellar Interferometer on Sirius},
+  year    = {1956},
+  month   = {nov},
+  number  = {4541},
+  pages   = {1046--1048},
+  volume  = {178},
+  doi     = {10.1038/1781046a0},
+}
+
+@Article{brannen1956,
+  author  = {ERIC Brannen and H. I. S. Ferguson},
+  journal = {Nature},
+  title   = {The Question of Correlation between Photons in Coherent Light Rays},
+  year    = {1956},
+  month   = {sep},
+  number  = {4531},
+  pages   = {481--482},
+  volume  = {178},
+  doi     = {10.1038/178481a0},
+}
+
+@Article{ducks,
+  author  = {Knox,Wayne H. and Alonso,Miguel and Wolf,Emil},
+  journal = {Physics Today},
+  title   = {Spatial coherence from ducks},
+  year    = {2010},
+  number  = {3},
+  pages   = {11-11},
+  volume  = {63},
+  doi     = {10.1063/1.3366225},
+  eprint  = {https://doi.org/10.1063/1.3366225},
+  url     = {https://doi.org/10.1063/1.3366225},
+}
+
+@Article{purcell,
+  author  = {E. M. Purcell},
+  journal = {Nature},
+  title   = {The Question of Correlation between Photons in Coherent Light Rays},
+  year    = {1956},
+  month   = {dec},
+  number  = {4548},
+  pages   = {1449--1450},
+  volume  = {178},
+  doi     = {10.1038/1781449a0},
+}
+
+@Book{rose,
+  author    = {Rose, Albert},
+  publisher = {Plenum Press},
+  title     = {Vision : human and electronic},
+  year      = {1973},
+  address   = {New York},
+  isbn      = {9780306307324},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
