--- a/Tex/thanks.tex
+++ b/Tex/thanks.tex
@@ -8,6 +8,6 @@ I greatly appreciate Diling Zhu, Peiho Sun, Yanwen Sun, Jordon O'Neal, Ichiro In
 
 A special mention of Siqi Li's masterful handling of Stephan's, my, and Tais' (not at all times coherent) suggestions, while being the only person of our group physically present at SSRL during Covid-19, is due.
 
-Thanks to the proofreading by Roland, Benny, Miriam, Kimon, and Lara, the most glaring grammatical missteps should have been found and all remaining errors be due to me not correctly implementing their feedback. 
+Thanks to the proofreading by Roland, Benny, Miriam, Toli, Kimon, and Lara, the most glaring grammatical missteps should have been found and all remaining errors be due to me not correctly implementing their feedback. 
 
 Last but certainly not least, I'd like to thank those close to me for their empathy and great support.
